--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass": "^1.32.11",
     "scandit-sdk": "^5.12.0",
     "scandit-sdk-react": "^4.0.2",
+    "swr": "^1.3.0",
     "ts-clipboard": "^1.0.17",
     "typescript": "^4.1.5",
     "uuid": "^8.3.2",
@@ -78,6 +79,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/crypto-js": "^4.0.1",
@@ -92,6 +94,7 @@
     "@types/react-text-mask": "^5.4.6",
     "@types/uuid": "^8.3.1",
     "eslint-config-prettier": "^8.3.0",
+    "miragejs": "^0.1.45",
     "prettier": "^2.5.1",
     "redux-devtools-extension": "^2.13.9"
   }
